fix(blog): aligns blog search bar to the right with 'news and updates'
#363

--- a/src/pages/app-blog/app-blog.scss
+++ b/src/pages/app-blog/app-blog.scss
@@ -138,6 +138,7 @@
         }
 
         .blog-search-group {
+          padding-left: 25%;
           width: 40%;
           @include media-breakpoint-down(sm) {
             width: 90%;
